name:                hypothesis-hs
version:             0.1.0.0
synopsis:            hypothes.is bindings 
description:         Please see README.md
homepage:            https://github.com/hodapp87/hypothesis-hs
license:             BSD3
license-file:        LICENSE
author:              Chris Hodapp
maintainer:          hodapp87@gmail.com
copyright:           2016, Chris Hodapp
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Lib
  build-depends:       base
                     , transformers
                     , text
                     , servant
                     , servant-client                     
                     , aeson
                     , http-client
  default-language:    Haskell2010

executable hypothesis-hs-exe
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hypothesis-hs
                     , transformers
                     , text
                     , servant
                     , servant-client                     
                     , aeson
                     , http-client
  default-language:    Haskell2010

-- test-suite hypothesis-hs-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , hypothesis-hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hodapp87/hypothesis-hs
